When r255294 was committed, it exposed the symbols lgammal, powl, and tgammal in libm.  These functions are part of ISO/IEC 9899:1999 and their prototypes should have been moved into the appropriate __ISO_C_VISIBLE >= 1999 section.  After moving the prototypes, remnants of r236148 can be removed.

PR:		standards/191754
Reviewed by:	bde